[gd_scene load_steps=2 format=3 uid="uid://bnwap7rfnoax0"]

[ext_resource type="Script" path="res://src/components/wave_rotation/wave_rotation.gd" id="1_conxc"]

[node name="WaveRotation" type="Node" node_paths=PackedStringArray("wave_timer", "spawn_timer")]
script = ExtResource("1_conxc")
wave_timer = NodePath("WaveTimer")
spawn_timer = NodePath("SpawnTimer")

[node name="WaveTimer" type="Timer" parent="."]
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
